--- a/linkextractor/step3/Dockerfile
+++ b/linkextractor/step3/Dockerfile
@@ -1,4 +1,4 @@
-FROM       python:3
+FROM       python
 
 WORKDIR    /app
 COPY       requirements.txt /app/
@@ -7,4 +7,5 @@ RUN        pip install -r requirements.txt
 COPY       *.py /app/
 RUN        chmod a+x *.py
 
-CMD        ["./main.py"]
+CMD        ["python", "/app/main.py"]
+
